feat: include sample dataset zip in release